--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <main>
-            <h1>LibsFarma</h1>
-            <p>@libsfarm</p>
+            <h1>Título da empresa</h1>
+            <p>@email</p>
         </main>
         <section class="links">
             <ul>
